--- a/src/api/componentes/inicio/Inicio.css
+++ b/src/api/componentes/inicio/Inicio.css
@@ -1,17 +1,12 @@
-:root {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-  
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-  
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
+h1 {
+    font-size: 40px;
+    line-height: 1.1;
+    color: #ffffff;
   }
-  
+h2 {
+    font-size: 20;
+    color: #ffffff;
+    font-size: 30px;
+  }
+
+
