--- a/src/api/componentes/inicio/Inicio.css
+++ b/src/api/componentes/inicio/Inicio.css
@@ -1,4 +1,4 @@
-body {background-image: url("../imagenes/fondo.png");}
+/*body {background-image: url("../imagenes/fondo.png");}*/
 h1 {
     font-size: 40px;
     line-height: 1.1;
