Creamos una funcion en modulo5 que le consulte a la tabla juegos. Modificamos los fondos y algunos css

--- a/src/api/componentes/modulo1/modulo1.css
+++ b/src/api/componentes/modulo1/modulo1.css
@@ -1,4 +1,4 @@
-.colores {
+.consultarColor  {
     flex: 1;
     background-image: url("../imagenes/modulo2.png");
     background-repeat: no-repeat;
