--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,22 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  flex: 1;
+display: flex;
+justify-content: center;
+}
+
+#root{
+  display: flex;
+  flex: 1;
 }
 
 body {
   background-color: #13072E;
   background-repeat: no-repeat;
   background-size: 100%;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex ;
 }
  
