--- a/src/api/componentes/inicio/Inicio.css
+++ b/src/api/componentes/inicio/Inicio.css
@@ -1,4 +1,9 @@
-/*body {background-image: url("../imagenes/fondo.png");}*/
+.inicio {
+  flex: 1;
+  background-image: url("../imagenes/fondo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 h1 {
     font-size: 40px;
     line-height: 1.1;
@@ -6,7 +11,7 @@ h1 {
   }
 h2 {
     font-size: 20;
-    color: #ffffff;
+    color: #0c0c0c;
     font-size: 30px;
   }
 
