--- a/src/api/componentes/inicio/Inicio.css
+++ b/src/api/componentes/inicio/Inicio.css
@@ -2,17 +2,19 @@
   flex: 1;
   background-image: url("../imagenes/fondo.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%; 
 }
 h1 {
     font-size: 40px;
     line-height: 1.1;
-    color: #ffffff;
+    
   }
 h2 {
     font-size: 20;
     color: #0c0c0c;
     font-size: 30px;
   }
+
+
 
 
